@@ -1,19 +1,17 @@
 package it.polimi.ingsw.gc26.model.game;
 
-import com.fasterxml.jackson.annotation.JsonCreator;
-import it.polimi.ingsw.gc26.model.ModelObservable;
 import it.polimi.ingsw.gc26.model.card.Card;
-import it.polimi.ingsw.gc26.model.card.GoldCard;
-import it.polimi.ingsw.gc26.model.deck.Deck;
-import it.polimi.ingsw.gc26.model.utils.SpecialCharacters;
-import it.polimi.ingsw.gc26.model.utils.TextStyle;
+import it.polimi.ingsw.gc26.network.ModelObservable;
+import it.polimi.ingsw.gc26.view_model.SimplifiedCommonTable;
 
-import java.util.*;
+import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.Optional;
 
 /**
  * This class represents a table containing decks every player can interact with
  */
-public class CommonTable {
+public class CommonTable implements Serializable {
     /**
      * This attribute represents the resource cards deck
      */
@@ -52,14 +50,20 @@ public class CommonTable {
     private int selectedY;
 
     /**
+     * Observable to notify client
+     */
+    private final ModelObservable observable;
+
+    /**
      * Initializes the common table with the decks
      *
      * @param resourceDeck resources cards deck
      * @param goldDeck     gold cards deck
      * @param starterDeck  initial cards deck
      * @param missionDeck  mission cards deck
+     * @param observable observable to notify client
      */
-    public CommonTable(Deck resourceDeck, Deck goldDeck, Deck starterDeck, Deck missionDeck) {
+    public CommonTable(Deck resourceDeck, Deck goldDeck, Deck starterDeck, Deck missionDeck, ModelObservable observable) {
         commonMissions = new ArrayList<>();
         resourceCards = new ArrayList<>();
         goldCards = new ArrayList<>();
@@ -69,28 +73,53 @@ public class CommonTable {
         this.missionDeck = missionDeck;
         selectedX = -1;
         selectedY = -1;
+        this.observable = observable;
     }
 
     /**
      * Sets the attribute selectedX and selectedY of the chosen card to select
      *
-     * @param selectedX coordinate X of the selected card
-     * @param selectedY coordinate Y of the selected card
+     * @param cardIndex index of the selected card on the common table
+     * @param clientID client unique ID
      */
-    public void selectCard(int selectedX, int selectedY, String clientID) {
-        // Check if the selectedX and selectedY are correct
-        if (selectedY >= 0 && selectedY < 2) {
-            if (selectedX >= 0 && selectedX < 3) {
-                this.selectedX = selectedX;
-                this.selectedY = selectedY;
-            } else {
-                // TODO gestire quando la posizione X non è corretta
-                ModelObservable.getInstance().notifyError("Position X not valid!", clientID);
-            }
-        } else {
-            ModelObservable.getInstance().notifyError("Position Y not valid!", clientID);
-            // TODO gestire quando la posizione Y non è corretta
+    public void selectCard(int cardIndex, String clientID) {
+        // Check if the card index are correct
+        if (cardIndex < 0 || cardIndex > 6) {
+            this.observable.notifyError("Position not valid!", clientID);
+            return;
         }
+
+        // Translate card position into coordinates
+        switch (cardIndex) {
+            case 0:
+                selectedX = 0;
+                selectedY = 0;
+                break;
+            case 1:
+                selectedX = 1;
+                selectedY = 0;
+                break;
+            case 2:
+                selectedX = 2;
+                selectedY = 0;
+                break;
+            case 3:
+                selectedX = 0;
+                selectedY = 1;
+                break;
+            case 4:
+                selectedX = 1;
+                selectedY = 1;
+                break;
+            case 5:
+                selectedX = 2;
+                selectedY = 1;
+                break;
+            default:
+                this.observable.notifyError("Select a position!", clientID);
+                return;
+        }
+        this.observable.notifyUpdateCommonTable(new SimplifiedCommonTable(resourceDeck.getTopCard(), goldDeck.getTopCard(), commonMissions, resourceCards, goldCards, cardIndex), "Card selected on common table", clientID);
     }
 
     /**
@@ -102,6 +131,7 @@ public class CommonTable {
      */
     public void addCard(Card card, ArrayList<Card> list, int index) {
         list.add(index, card);
+        this.observable.notifyUpdateCommonTable(new SimplifiedCommonTable(this.resourceDeck.getTopCard(), this.goldDeck.getTopCard(), this.commonMissions, this.resourceCards, this.goldCards, -1), "Common Table updated!");
     }
 
     /**
@@ -113,57 +143,65 @@ public class CommonTable {
      * @return removed card
      */
     private Card removeFromTable(ArrayList<Card> list, int index, Deck deck, String clientID) {
-        Card toRemove = null;
-        if (list.get(index) != null) {
-            if (!deck.getCards().isEmpty())
-                toRemove = list.set(index, deck.removeCard());
-            else
-                toRemove = list.set(index, null);
-        } else {
-            // TODO gestire quando la posizione selezionata non contiene una carta
-            ModelObservable.getInstance().notifyError("Position not valid!", clientID);
+        if (list.get(index) == null) {
+            this.observable.notifyError("Position not valid!", clientID);
+            return null;
         }
+        Card toRemove = null;
+        if (!deck.getCards().isEmpty())
+            toRemove = list.set(index, deck.removeCard());
+        else
+            toRemove = list.set(index, null);
         return toRemove;
     }
 
     /**
      * Removes the selected card from the table and returns it
      *
+     * @param clientID client unique ID
      * @return removed card
      */
     public Card removeSelectedCard(String clientID) {
-        if(getSelectedCard().isPresent()){
-            Card toRemove = null;
-            if (selectedY == 0) {
-                if (selectedX == 2) {
-                    if (!resourceDeck.getCards().isEmpty())
-                        toRemove = resourceDeck.removeCard();
-                    else {
-                        // TODO gestire quando il mazzo è finito
-                    }
-                } else {
-                    toRemove = removeFromTable(resourceCards, selectedX, resourceDeck, clientID);
-                }
-            } else if (selectedY == 1) {
-                if (selectedX == 2) {
-                    if (!goldDeck.getCards().isEmpty())
-                        toRemove = goldDeck.removeCard();
-                    else {
-                        // TODO gestire quando il mazzo è finito
-                    }
-                } else {
-                    toRemove = removeFromTable(goldCards, selectedX, goldDeck, clientID);
-                }
-            }
-            selectedX = -1;
-            selectedY = -1;
-            return toRemove;
-        }else{
-            // TODO notify view
-            ModelObservable.getInstance().notifyError("Select a position first!", clientID);
+        if (!getSelectedCard().isPresent()) {
+            this.observable.notifyError("Select a position first!", clientID);
             return null;
         }
+        Card toRemove = null;
+        if (selectedY == 0) {
+            if (selectedX == 2) {
+                if (!resourceDeck.getCards().isEmpty())
+                    toRemove = resourceDeck.removeCard();
+                else {
+                    // TODO gestire quando il mazzo è finito
+                }
+            } else {
+                toRemove = removeFromTable(resourceCards, selectedX, resourceDeck, clientID);
+            }
+        } else if (selectedY == 1) {
+            if (selectedX == 2) {
+                if (!goldDeck.getCards().isEmpty())
+                    toRemove = goldDeck.removeCard();
+                else {
+                    // TODO gestire quando il mazzo è finito
+                }
+            } else {
+                toRemove = removeFromTable(goldCards, selectedX, goldDeck, clientID);
+            }
+        }
+        selectedX = -1;
+        selectedY = -1;
 
+        this.observable.notifyUpdateCommonTable(
+                new SimplifiedCommonTable(
+                        resourceDeck.getTopCard(),
+                        goldDeck.getTopCard(),
+                        commonMissions,
+                        resourceCards,
+                        goldCards,
+                        -1),
+                "Card removed from common table"
+        );
+        return toRemove;
     }
 
     /**
@@ -175,7 +213,7 @@ public class CommonTable {
         Card selectedCard = null;
         if (selectedY == 0) {
             if (selectedX == 0) {
-                selectedCard = resourceCards.getFirst();
+                selectedCard = resourceCards.get(0);
             } else if (selectedX == 1) {
                 selectedCard = resourceCards.get(1);
             } else if (selectedX == 2) {
@@ -183,7 +221,7 @@ public class CommonTable {
             }
         } else if (selectedY == 1) {
             if (selectedX == 0) {
-                selectedCard = goldCards.getFirst();
+                selectedCard = goldCards.get(0);
             } else if (selectedX == 1) {
                 selectedCard = goldCards.get(1);
             } else if (selectedX == 2) {
@@ -255,170 +293,4 @@ public class CommonTable {
     public Deck getMissionDeck() {
         return missionDeck;
     }
-
-    /**
-     * Returns the selected card's X coordinate
-     *
-     * @return selectedX
-     */
-    public int getSelectedX() {
-        return selectedX;
-    }
-
-    /**
-     * Returns the selected card's Y coordinate
-     *
-     * @return selectedY
-     */
-    public int getSelectedY() {
-        return selectedY;
-    }
-
-    public String[][] emptyPrintable(int xCardDim, int yCardDim){
-        String[][] s = new String[yCardDim][xCardDim];
-
-        String decoration = SpecialCharacters.SQUARE_BLACK.getCharacter();
-        String backgroundSymbol = SpecialCharacters.SQUARE_BLACK.getCharacter();
-        String blank = SpecialCharacters.BACKGROUND_BLANK_WIDE.getCharacter();
-        String backgroundColor = TextStyle.BACKGROUND_BLACK.getStyleCode();
-        String reset = TextStyle.STYLE_RESET.getStyleCode();
-
-        //corners
-        s[0][0] = backgroundSymbol;
-        s[0][xCardDim - 1] = backgroundSymbol;
-        s[yCardDim - 1][0] = backgroundSymbol;
-        s[yCardDim - 1][xCardDim - 1] = backgroundSymbol;
-
-        //decoration
-        s[0][xCardDim/2] = blank + decoration  + blank;
-        s[yCardDim/2][xCardDim/2] = decoration + decoration + decoration;
-        s[yCardDim - 1][xCardDim/2] = blank + decoration  + blank;
-
-        //rest of the card
-        for(int i=0; i<yCardDim; i++){
-            for(int j=0; j<xCardDim; j++){
-                if(s[i][j] == null){
-                    s[i][j] = blank;
-                }
-                s[i][j] = backgroundColor + s[i][j] + reset;
-            }
-        }
-
-        return s;
-    }
-
-    private void addPrintable(String[][] printable, String[][] context, int xBase, int yBase){
-        int y=0, x;
-
-        for(String[] row: printable){
-            x=0;
-            for(String col: row){
-                context[yBase + y][xBase + x] = col;
-                x++;
-            }
-            y++;
-        }
-    }
-
-    private void decorateDeck(String[][] ct, int xDeck, int yDeck, int xCardDim, int yCardDim){
-        //ct[yDeck + yCardDim][xDeck] = "▔▔▔▔▔▔▔▔▔▔▔▔▔";
-        xDeck += xCardDim;
-        for(int yOff=0; yOff<yCardDim; yOff++){
-            ct[yDeck + yOff][xDeck] = "║";
-        }
-        //ct[yResource + yCardDim][0] = "╚═" + whiteSquare + "══" + whiteSquare + "══" + whiteSquare + "═╝";
-    }
-
-    public String[][] printableCommonTable(){
-        int xCardDim = 3;
-        int yCardDim = 3;
-        int xResource = 1, yResource = 1;
-        int xGold = 1, yGold = yResource + yCardDim + 2;
-        int xMissionDim = 3;
-        int yMissionDim = 5;
-        int xMission1 = 0;
-        int xMission2 = xMission1 + xMissionDim + 2;
-        int yMission = yGold + yCardDim + 2;
-
-        int xDim = 2*(xCardDim+2) + yMissionDim+1 +1;
-        int yDim = 16;
-        int index = 0;
-
-        String blackSquare = SpecialCharacters.SQUARE_BLACK.getCharacter();
-        String space = "    ";
-                //SpecialCharacters.BACKGROUND_BLANK_MEDIUM.getCharacter();
-
-        String[][] ct = new String[yDim][xDim];
-
-        //initialize empty common table
-        for(int i=0; i<yDim; i++){
-            for(int j=0; j<xDim; j++){
-                ct[i][j] = space;
-            }
-        }
-
-        //insert uncovered resource cards
-        for (int i=0; i<2; i++) {
-            Card r = resourceCards.get(i);
-            ct[yResource-1][i] = "(" + index + ") Resource Card    ";
-
-            if(r == null){
-                addPrintable(emptyPrintable(xCardDim,yCardDim), ct, xResource, yResource);
-            } else {
-                addPrintable(r.getFront().printableSide(), ct, xResource, yResource);
-            }
-
-            xResource += xCardDim + 2;
-            index++;
-        }
-
-        xResource ++;
-
-        //insert resource deck
-        ct[yResource-1][2] = "   (" + index + ") Resource Deck";
-        if(resourceDeck.getTopCard() == null){
-            addPrintable(emptyPrintable(xCardDim,yCardDim), ct, xResource, yResource);
-        } else {
-            addPrintable(resourceDeck.printableDeck(), ct, xResource, yResource);
-            decorateDeck(ct, xResource, yResource, xCardDim, yCardDim);
-        }
-
-        index++;
-
-        //insert uncovered gold cards
-        for (int i=0; i<2; i++) {
-            Card g = goldCards.get(i);
-            ct[yGold-1][i] = "(" + index + ") Gold Card        ";
-
-            if(g == null){
-                addPrintable(emptyPrintable(xCardDim, yCardDim), ct, xGold, yGold);
-            } else {
-                addPrintable(g.getFront().printableSide(), ct, xGold, yGold);
-            }
-            xGold += xCardDim + 2;
-            index++;
-        }
-
-        xGold ++;
-
-        //insert gold deck
-        ct[yGold-1][2] = "   (" + index + ") Gold Deck" ;
-
-        if(goldDeck.getTopCard() == null){
-            addPrintable(emptyPrintable(xCardDim, yCardDim), ct, xGold, yGold);
-        } else {
-            addPrintable(goldDeck.printableDeck(), ct, xGold, yGold);
-            decorateDeck(ct, xGold, yGold, xCardDim, yCardDim);
-        }
-
-        //insert common mission cards
-        ct[yMission-1][0] = "\nCommon Mission 0             " ;
-        ct[yMission-1][1] = "Common Mission 1" ;
-        addPrintable(commonMissions.get(0).getFront().printableSide(), ct, xMission1, yMission);
-        addPrintable(commonMissions.get(1).getFront().printableSide(), ct, xMission2, yMission);
-
-
-        return ct;
-    }
-
 }
